# nytwatch

./: .gitignore  README.md  pyproject.toml
claude-nytwatch-studio/: CLAUDE.md  README.md
claude-nytwatch-studio/.claude/: doc-config.md  narrative-config.md  project-config.md  settings.json  source-paths.md  specialist-routing.md  statusline.sh
claude-nytwatch-studio/.claude/agents/: accessibility-specialist.md  art-director.md  audio-director.md  community-manager.md  creative-director.md  economy-designer.md  engine-programmer.md  game-designer.md  gameplay-programmer.md  godot-csharp-specialist.md  godot-gdextension-specialist.md  godot-gdscript-specialist.md  godot-shader-specialist.md  godot-specialist.md  level-designer.md  live-ops-designer.md  narrative-director.md  producer.md  prototyper.md  qa-lead.md  (+8 more)
claude-nytwatch-studio/CNS Skill Testing Framework/: CLAUDE.md  README.md  catalog.yaml  quality-rubric.md
claude-nytwatch-studio/design/: CLAUDE.md
claude-nytwatch-studio/docs/: CLAUDE.md  COLLABORATIVE-DESIGN-PRINCIPLE.md  WORKFLOW-GUIDE.md
claude-nytwatch-studio/src/: CLAUDE.md
docs/: BUILD_RUNTIME_ARCHITECTURE.md  CAUSALITY_TRACKING_ARCHITECTURE.md  DESIGN_SYSTEM.md  GAMEPLAY_TRACKING_PLAN.md  NYTWATCH_ADAPTER.md  PRODUCT_BRIEF.md  SETUP_GUIDE.md  TECHNICAL_SPEC.md  TRACKING_WEBSOCKET_ARCHITECTURE.md
scripts/unix/: install-plugin.sh  install.sh  migrate.sh  uninstall.sh
scripts/windows/: install-plugin.ps1  install.ps1  migrate.ps1  uninstall.ps1
src/auditor/: config.py  database.py  main.py  models.py  paths.py  scan_state.py  ws_manager.py
src/nytwatch/: config.py  database.py  main.py  models.py  paths.py  scan_state.py  ws_manager.py
ue5-plugin/NytwatchAgent/: NytwatchAgent.uplugin  README.md
(+308 files in other folders)
